--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
   "files.eol": "\n",
   "editor.tabSize": 2,
   "stylelint.validate": ["css", "less", "postcss"],
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "files.autoSave": "off
+  ",
+  "json.schemas": []
 }
