--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,6 @@
   "editor.tabSize": 2,
   "stylelint.validate": ["css", "less", "postcss"],
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "files.autoSave": "off
-  ",
+  "files.autoSave": "off",
   "json.schemas": []
 }
